# knowledge-catalog

okf/: .gitignore  README.md  pyproject.toml
okf/bundles/crypto_bitcoin/: index.md  viz.html
okf/bundles/crypto_bitcoin/datasets/: crypto_bitcoin.md  index.md
okf/bundles/crypto_bitcoin/tables/: blocks.md  index.md  inputs.md  outputs.md  transactions.md
okf/bundles/ga4/: index.md  viz.html
okf/bundles/ga4/datasets/: index.md
okf/bundles/ga4/references/: index.md
okf/bundles/ga4/tables/: events_.md  index.md
okf/bundles/stackoverflow/: index.md  viz.html
okf/bundles/stackoverflow/datasets/: index.md  stackoverflow.md
okf/bundles/stackoverflow/references/: badge_classes.md  close_as_off_topic_reason_types.md  close_reason_types.md  creative_commons_by_sa_4_0_license.md  flag_types.md  index.md  link_types.md  pending_flags.md  post_feedback.md  post_history_type_ids.md  post_notice_class_ids.md  post_notice_duration_ids.md  post_notice_type_definitions.md  post_notice_types.md  post_notices.md  post_type_ids.md  related_questions.md  review_rejection_reasons.md  review_task_result_types.md  review_task_results.md  review_task_states.md  review_task_types.md  review_tasks.md  (+10 more)
okf/samples/crypto_bitcoin/: README.md  seeds.txt
okf/samples/ga4_merch_store/: README.md  seeds.txt
okf/samples/stackoverflow/: README.md  seeds.txt
okf/src/enrichment_agent/: __main__.py  agent.py  cli.py  runner.py
okf/tests/: test_bigquery_source.py  test_bundle_tools.py  test_document.py  test_index.py  test_viewer.py  test_web_fetcher.py  test_web_tools.py
(+67 files in other folders)
